package state;

public interface ElevatorState {
    void move();
}
